src/FlowtideDotNet.Substrait/antlr/generated/SubstraitTypeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.12.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SubstraitType.g4 by ANTLR 4.12.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.12.0")]
[System.CLSCompliant(false)]
public partial class SubstraitTypeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		If=1, Then=2, Else=3, Boolean=4, I8=5, I16=6, I32=7, I64=8, FP32=9, FP64=10, 
		String=11, Binary=12, Timestamp=13, TimestampTZ=14, Date=15, Time=16, 
		IntervalYear=17, IntervalDay=18, UUID=19, Decimal=20, FixedChar=21, VarChar=22, 
		FixedBinary=23, Struct=24, NStruct=25, List=26, Map=27, ANY=28, And=29, 
		Or=30, Assign=31, Eq=32, NotEquals=33, Gte=34, Lte=35, Gt=36, Lt=37, Bang=38, 
		Plus=39, Minus=40, Asterisk=41, ForwardSlash=42, Percent=43, OBracket=44, 
		CBracket=45, OParen=46, CParen=47, SColon=48, Comma=49, QMark=50, Colon=51, 
		SingleQuote=52, Number=53, Identifier=54, LineComment=55, BlockComment=56, 
		Whitespace=57, Newline=58;
	public const int
		RULE_start = 0, RULE_scalarType = 1, RULE_parameterizedType = 2, RULE_numericParameter = 3, 
		RULE_anyType = 4, RULE_type = 5, RULE_expr = 6;
	public static readonly string[] ruleNames = {
		"start", "scalarType", "parameterizedType", "numericParameter", "anyType", 
		"type", "expr"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "':='", "'='", "'!='", "'>='", 
		"'<='", "'>'", "'<'", "'!'", "'+'", "'-'", "'*'", "'/'", "'%'", "'['", 
		"']'", "'('", "')'", "';'", "','", "'?'", "':'", "'''"
	};
	private static readonly string[] _SymbolicNames = {
		null, "If", "Then", "Else", "Boolean", "I8", "I16", "I32", "I64", "FP32", 
		"FP64", "String", "Binary", "Timestamp", "TimestampTZ", "Date", "Time", 
		"IntervalYear", "IntervalDay", "UUID", "Decimal", "FixedChar", "VarChar", 
		"FixedBinary", "Struct", "NStruct", "List", "Map", "ANY", "And", "Or", 
		"Assign", "Eq", "NotEquals", "Gte", "Lte", "Gt", "Lt", "Bang", "Plus", 
		"Minus", "Asterisk", "ForwardSlash", "Percent", "OBracket", "CBracket", 
		"OParen", "CParen", "SColon", "Comma", "QMark", "Colon", "SingleQuote", 
		"Number", "Identifier", "LineComment", "BlockComment", "Whitespace", "Newline"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SubstraitType.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SubstraitTypeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SubstraitTypeParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SubstraitTypeParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SubstraitTypeParser.Eof, 0); }
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 14;
			expr(0);
			State = 15;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScalarTypeContext : ParserRuleContext {
		public ScalarTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scalarType; } }
	 
		public ScalarTypeContext() { }
		public virtual void CopyFrom(ScalarTypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DateContext : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Date() { return GetToken(SubstraitTypeParser.Date, 0); }
		public DateContext(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterDate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitDate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDate(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringContext : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode String() { return GetToken(SubstraitTypeParser.String, 0); }
		public StringContext(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterString(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitString(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class I64Context : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I64() { return GetToken(SubstraitTypeParser.I64, 0); }
		public I64Context(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterI64(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitI64(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitI64(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class I32Context : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I32() { return GetToken(SubstraitTypeParser.I32, 0); }
		public I32Context(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterI32(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitI32(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitI32(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntervalYearContext : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IntervalYear() { return GetToken(SubstraitTypeParser.IntervalYear, 0); }
		public IntervalYearContext(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterIntervalYear(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitIntervalYear(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntervalYear(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UuidContext : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UUID() { return GetToken(SubstraitTypeParser.UUID, 0); }
		public UuidContext(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterUuid(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitUuid(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUuid(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class I8Context : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I8() { return GetToken(SubstraitTypeParser.I8, 0); }
		public I8Context(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterI8(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitI8(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitI8(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class I16Context : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I16() { return GetToken(SubstraitTypeParser.I16, 0); }
		public I16Context(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterI16(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitI16(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitI16(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BinaryContext : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Binary() { return GetToken(SubstraitTypeParser.Binary, 0); }
		public BinaryContext(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterBinary(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitBinary(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinary(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntervalDayContext : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IntervalDay() { return GetToken(SubstraitTypeParser.IntervalDay, 0); }
		public IntervalDayContext(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterIntervalDay(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitIntervalDay(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntervalDay(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Fp64Context : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FP64() { return GetToken(SubstraitTypeParser.FP64, 0); }
		public Fp64Context(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterFp64(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitFp64(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFp64(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Fp32Context : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FP32() { return GetToken(SubstraitTypeParser.FP32, 0); }
		public Fp32Context(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterFp32(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitFp32(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFp32(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TimeContext : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Time() { return GetToken(SubstraitTypeParser.Time, 0); }
		public TimeContext(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterTime(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitTime(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTime(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BooleanContext : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Boolean() { return GetToken(SubstraitTypeParser.Boolean, 0); }
		public BooleanContext(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterBoolean(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitBoolean(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolean(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TimestampContext : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Timestamp() { return GetToken(SubstraitTypeParser.Timestamp, 0); }
		public TimestampContext(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterTimestamp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitTimestamp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTimestamp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TimestampTzContext : ScalarTypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TimestampTZ() { return GetToken(SubstraitTypeParser.TimestampTZ, 0); }
		public TimestampTzContext(ScalarTypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.EnterTimestampTz(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISubstraitTypeListener typedListener = listener as ISubstraitTypeListener;
			if (typedListener != null) typedListener.ExitTimestampTz(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISubstraitTypeVisitor<TResult> typedVisitor = visitor as ISubstraitTypeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTimestampTz(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScalarTypeContext scalarType() {
		ScalarTypeContext _localctx = new ScalarTypeContext(Context, State);
		EnterRule(_localctx, 2, RULE_scalarType);
		try {
			State = 33;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Boolean:
				_localctx = new BooleanContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 17;
				Match(Boolean);
				}
				break;
			case I8:
				_localctx = new I8Context(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 18;
				Match(I8);
				}
				break;
			case I16:
				_localctx = new I16Context(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 19;
				Match(I16);
				}
				break;
			case I32:
				_localctx = new I32Context(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 20;
				Match(I32);
				}
				break;
			case I64:
				_localctx = new I64Context(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 21;
				Match(I64);
				}
				break;
			case FP32:
				_localctx = new Fp32Context(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 22;
				Match(FP32);
				}
				break;
			case FP64:
				_localctx = new Fp64Context(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 23;
				Match(FP64);
				}
				break;
			case String:
				_localctx = new StringContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 24;
				Match(String);
				}
				break;
			case Binary:
				_localctx = new BinaryContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 25;
				Match(Binary);
				}
				break;
			case Timestamp:
				_localctx = new TimestampContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 26;
				Match(Timestamp);
				}
				break;
			case TimestampTZ:
				_localctx = new TimestampTzContext(_localctx);
				EnterOuterAlt(_localctx, 11);
				{
				State = 27;
				Match(TimestampTZ);
				}
				break;
			case Date:
				_localctx = new DateContext(_localctx);
				EnterOuterAlt(_localctx, 12);
				{
				State = 28;
				Match(Date);
				}
				break;
			case Time:
				_localctx = new TimeContext(_localctx);
				EnterOuterAlt(_localctx, 13);
				{
				State = 29;
				Match(Time);
				}
				break;
			case IntervalDay:
				_localctx = new IntervalDayContext(_localctx);
				EnterOuterAlt(_localctx, 14);
				{
				State = 30;
				Match(IntervalDay);
				}
				break;
			case IntervalYear:
				_localctx = new IntervalYearContext(_localctx);
				EnterOuterAlt(_localctx, 15);
				{
				State = 31;
				Match(IntervalYear);
				}
				break;
			case UUID:
				_localctx = new UuidContext(_localctx);
				EnterOuterAlt(_localctx, 16);
				{
				State = 32;
				Match(UUID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
